Id hidden from frontend and readme deleted

--- a/client/index.html
+++ b/client/index.html
@@ -8,19 +8,17 @@
 </head>
 <body>
     <main>
-        <label>to do:</label>
+        <label>Add to do: </label>
         <input type="text" id="todo-input">
-        <button id="add-todo-btn">Add todo</button>
-
-        <br><br><br>
-        <div>
+        <button id="add-todo-btn">Add</button>
+        <!-- <div>
            <input placeholder="search by todo" id="search-input">
            <button id="search-btn">Search</button>
-        </div>
+        </div> -->
 
         <table id="table">
             <thead>
-                <th>ID</th>
+                <th class='hiddenId'>ID</th>
                 <th>todo</th>
                 <th>Date Added</th>
                 <th>Delete</th>
